--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
   </head>
   <body>
     <center><h1>Twine - People Analytics</h1></center>
-    <center><img src="stream.mjpg" width="640" height="480" /></center>
+    <center>
+      <img
+        src="http://twinepi.local:8000/stream.mjpg"
+        width="640"
+        height="480"
+      />
+    </center>
   </body>
 </html>
